Bug 1786240: Clear a cached BUSY state before firing doc load complete. r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D159136