accessible/ipc/DocAccessibleParent.cpp
@@ -349,7 +349,11 @@ void DocAccessibleParent::FireEvent(RemoteAccessible* aAcc,
       // A DocAccessible gets the STALE state while it is still loading, but we
       // don't fire a state change for that. That state might have been
       // included in the initial cache push, so clear it here.
-      UpdateStateCache(states::STALE, false);
+      // We also clear the BUSY state here. Although we do fire a state change
+      // for that, we fire it after doc load complete. It doesn't make sense
+      // for the document to report BUSY after doc load complete and doing so
+      // confuses JAWS.
+      UpdateStateCache(states::STALE | states::BUSY, false);
     }
   }
 
